@@ -3,6 +3,9 @@
 # Plugin created by Alexandre Dupouy, with the assistance of Mike Fedyk
 #
 # $Log$
+# Revision 1.9.2.1  2005/03/16 13:45:45  ilmari
+# Fix autoconf for linux/{nfsd,nfs_client}.
+#
 # Revision 1.9  2004/12/10 10:47:49  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -39,11 +42,11 @@ NFSD=/proc/net/rpc/nfsd
 proc="getattr setattr lookup access readlink read write create mkdir symlink mknod remove rmdir rename link readdir readdirplus fsstat fsinfo pathconf commit"
 
 if [ "$1" = "autoconf" ]; then
-	if [ -x "$NFSD" ]; then
+	if [ -f "$NFSD" ]; then
 		echo yes
 		exit 0
 	else
-		echo no
+		echo "no (no $NFSD)"
 		exit 1
 	fi
 fi
